Kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: my-app-deployment
   labels: 
     app: my-app
spec: 
  replicas: 2
  selector: 
     matchLabels:
       app: my-app
  template:
    metadata:
       labels:
         app: my-app
    spec:
      imagePullSecrets:
         - name: my-registry-key 
      containers:
       - name: my-app
         image: 98756308747890.dkr.ecr.eu-central-1.amazonaws.com/my-app:1.3
         imagePullPolicy: Always
         ports: 
         - containerPort: 8080
