Kubernetes/NodePort-service.yaml
apiVersion: v1
kind: Service
metadata: 
   name: ms-service-nodeport
spec:
  type: NodePort
  selector:
     app: microservice-one
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
      nodePort: 3008
