Kubernetes/ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: ms-one-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec: 
  rules:
    - host: microservice-one.com
      http:
        paths:
        - path: /
          backend: 
             serviceName: microservice-one-service
             servicePort: 3200
